feat: support todo in lists
